# uiCA_wrapper

./: .gitignore  .gitmodules  DEVELOPMENT.md  MANIFEST.in  README.md  build.sh  pyproject.toml  setup.py  setup.sh  shell.nix  test.py
.github/workflows/: publish.yml  pylint.yml  python-app.yml
python_mca_wrapper/: __init__.py  llvm_mca_wrapper.py
src/machine_code_analyzer/: __init__.py  llvm_mca_wrapper.py  uica_wrapper.py
src/machine_code_analyzer/test/: test.py  test.s  test2.c  test_llvm_mca.py
src/machine_code_analyzer/test/files/: avx_short.s
test/: test.py  test_llvm_mca.py
